fixes overflow .2

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
-body {
+body ,html{
   margin: 0;
   padding: 0;
- overflow-x: hidden;
+  overflow-x: hidden;
 }
 
-@font-face{
-  font-family: 'Overused Grotesk';
-  src: local('Overused Grotesk'),
-       url('./assets/fonts/overused_grotesk/ttf/OverusedGrotesk-Black.ttf') format('');
+@font-face {
+  font-family: "Overused Grotesk";
+  src: local("Overused Grotesk"),
+    url("./assets/fonts/overused_grotesk/ttf/OverusedGrotesk-Black.ttf")
+      format("");
 }
